--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   ],
   "engines": {
     "node": ">= 18"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0"
   }
 }
