--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,5 +2,15 @@
   "name": "@markliu2013/components",
   "version": "0.0.1",
   "main": "index.js",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "vue": "^3.4.21"
+  }
 }
