--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0"
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0",
+    "vue": "^3.4.21"
   }
 }
