--- a/play/package.json
+++ b/play/package.json
@@ -1,19 +1,20 @@
 {
   "name": "play",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite"
   },
-  "dependencies": {
-    "vue": "^3.4.21",
-    "@markliu2013/components": "workspace:^0.0.1"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "@markliu2013/components": "workspace:^"
   }
 }
